new v2 routes and fixed swagger docs
